openmediavault (0.2.4.8) stable; urgency=low

  * Mantis 0000152: Apache dependency too restricted
  * Mantis 0000171: DNS Server update in GUI blank interfaces
  * Mantis 0000192: NTP server use results in collectd errors

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Oct 2011 14:18:11 +0200

openmediavault (0.2.4.7.1) stable; urgency=low

  * Mantis 0000186: GUI no longer working.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Oct 2011 00:56:25 +0200

openmediavault (0.2.4.7) stable; urgency=low

  * Mantis 0000169: Edit Ethernet Interface show "Add physical interface"
  * Mantis 0000177: File /etc/host not well modified
  * Mantis 0000179: Graphs fail to update when removing stale UUID graph data
  * Mantis 0000180: Change order of SSL certificate fields
  * Mantis 0000184: Delete existing NTFS Partition
  * Mantis 0000185: Add FTP logs in WebGUI

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 27 Oct 2011 19:30:02 +0200

openmediavault (0.2.4.6) stable; urgency=low

  * Increase HTTP timeout to 45 seconds.
  * Improve user management. Users are automatically added to the group
    'users'.
  * Validate privileges before putting them. Also filter user 'admin' in
    shared folder privileges dialog.
  * Mantis 0000095: Add ability to hide [homes] in Samba
  * Mantis 0000098: Hide Samba "Printer and Faxes" as shown in Windows
  * Mantis 0000145: Error when setting privileges on a shared folder. Only
    update the given shared folder privileges.
  * Mantis 0000147: FTP SSL/TLS error when enabling certificate
  * Mantis 0000154: Area Storage/Filesystem unlink error
  * Mantis 0000158: Users without a valid shell cannot access FTP shares
  * Mantis 0000165: System/Certificates/Add SSL Certificate/Reset only
    deletes Comment-field

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 25 Oct 2011 14:55:21 +0200

openmediavault (0.2.4.6) stable; urgency=low
