@@ -191,6 +191,11 @@ case "$1" in
 			omv_config_add_element "//services/smb" "homesenable" "0"
 			omv_config_add_element "//services/smb" "homesbrowseable" "1"
 		fi
+		if dpkg --compare-versions "$2" lt-nl "0.2.4.8"; then
+			apt-get remove --purge powernowd
+			omv-mkconf cpufrequtils
+			omv-mkconf mdadm
+		fi
 	;;
 
 	abort-upgrade|abort-remove|abort-deconfigure)
