@@ -1,2 +1,2 @@
-:programname, isequal, "proftpd" /var/log/proftpd.log
+:programname, isequal, "proftpd" /var/log/proftpd/proftpd.log
 & ~
