@@ -30,7 +30,7 @@ set -e
 . /usr/share/openmediavault/scripts/helper-functions
 
 OMV_CPUFREQUTILS_DEFAULT=${OMV_CPUFREQUTILS_DEFAULT:-"/etc/default/cpufrequtils"}
-OMV_CPUFREQUTILS_GOVERNOR=${OMV_CPUFREQUTILS_GOVERNOR:-"ondemand"}
+OMV_CPUFREQUTILS_GOVERNOR=${OMV_CPUFREQUTILS_GOVERNOR:-"conservative"}
 OMV_CPUFREQUTILS_MAXSPEED=${OMV_CPUFREQUTILS_MAXSPEED:-"0"}
 OMV_CPUFREQUTILS_MINSPEED=${OMV_CPUFREQUTILS_MINSPEED:-"0"}
 OMV_LOADCPUFREQ_DEFAULT=${OMV_LOADCPUFREQ_DEFAULT:-"/etc/default/loadcpufreq"}
