@@ -3,6 +3,11 @@ openmediavault (0.2.4.8) stable; urgency=low
   * Mantis 0000152: Apache dependency too restricted
   * Mantis 0000171: DNS Server update in GUI blank interfaces
   * Mantis 0000192: NTP server use results in collectd errors
+  * Mantis 0000207: proftpd.log
+  * Mantis 0000210: cpufrequtils - detection and powernowd corrections
+  * Mantis 0000211: breaking apache config
+  * Mantis 0000215: System/Notification/General Setting can't be disabled
+    any more
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 28 Oct 2011 14:18:11 +0200
 
